--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 	<meta charset='utf-8'>
 
 	<title>ONU</title>
- "A game for you" />
 
   <style type="text/css">
 body {
@@ -20,7 +19,7 @@ a:link {
   }
 
 #andrew {
-  color: #ffffff;
+  color: #f6f4e6;
   margin: 0 auto;
   text-align: center;
   font-size: 55px;
@@ -43,12 +42,12 @@ a:link {
   margin-top: 25px;
 }
 #bio {
-  color: #4D9078;
+  color: #4ba756;
   margin: 0 auto;
   text-align: center;
-  font-size:44px;
+  font-size:24px;
   font-family: 'Nunito', sans-serif;
-  margin-top: 15px;
+  margin-top: 0px;
 
 }
 #pic {
@@ -64,9 +63,10 @@ a:link {
 
 }
 img.foo {    
--webkit-border-radius: 50px;
--moz-border-radius: 50px;
-border-radius: 50px;
+-webkit-border-radius: 20px;
+-moz-border-radius: 20px;
+border-radius: 20px;
+box-shadow: 10px 10px 50px black;
 }
 
 #link {
@@ -83,13 +83,10 @@ border-radius: 50px;
 </head>
 <body>
 
-<div id="andrew">Frenlo.biz</div>
-
-
-
+<div id="andrew">ONU</div>
 
 <div id="bio">
-A Smile For You
+A Fun Game For You
 </div>
 
 <br>
